--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>this is our first page </h1>
-        <h2>this is first shashi commit</h2>
-        <p>hello everyone this one is my first git repoistery</p>
+        <h1>Hello Everyone ! This one is my first commit on git repoistery</h1>
+        <h1>This is our First Page </h1>
+        <h2>This is First Commit by Shashi</h2>
+        <p>Hello Everyone ! This one is my first git repoistery</p>
     </body>
 </html>
